fix(uiGridRenderContainer): Inherit position
Change position: relative to position: inherit. This will prevent the
footer from overlapping the viewport content incorrectly.  It appears to
not break anything else that's not currently broken...

Fixes #2030

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -1,6 +1,6 @@
 
 .ui-grid-render-container {
-  position: relative;
+  position: inherit;
   // overflow: hidden;
 
   .border-radius(0, @gridBorderRadius, @gridBorderRadius, 0);
